--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
         Generic github page
     </title>
     <meta name="viewport" content="width=device-width">
+    <meta name="description" content="Page with Pp4's various projects. Main page.">
     <link rel="stylesheet" type="text/css" href="style.css">
 </head>
 
@@ -64,48 +65,61 @@
                 </svg>
             </div>
         </header>
-        <div class="main-section">
-
-            <div class="wrapper">
-                <canvas id="canvas" width="500" height="500" style="max-width: 95%;"></canvas>
-                <div class="controls">
-                    <pre><label for="Vvalue">Input vector (x,y,z,</label><label for="Tvalue">theta)</label></pre>
-                    <textarea id="Vvalue" rows=1 cols="32" readonly></textarea>
-                    <textarea id="Tvalue" rows=1 cols="3" readonly></textarea>
-                    <pre><label for="Nvalue">Normalized vector</label></pre>
-                    <textarea id="Nvalue" rows=1 cols="36" readonly></textarea>
-                    <pre><label for="Qvalue"></label>Quaternion (w,x,y,z)</label></pre>
-                    <textarea id="Qvalue" rows=1 cols="36" readonly></textarea>
-                    <pre><label for="Mvalue"></label>Rotation matrix</label></pre>
-                    <textarea id="Mvalue" rows=3 cols="36" readonly></textarea>
-                    <pre><label for="Pvalue">Vertices of some cube</label></pre>
-                    <textarea id="Pvalue" rows=8 cols="36" readonly></textarea>
-                </div>
+        <div class="main-section" style="display: flex; flex-wrap: wrap; gap:0 10%; justify-content: center;">
+            <canvas id="canvas" width="500" height="500"></canvas>
+            <div class="information">
+                <pre><label for="Vvalue">Input vector (x,y,z,</label><label for="Tvalue">theta)</label></pre>
+                <textarea id="Vvalue" rows=1 cols="32" readonly></textarea>
+                <textarea id="Tvalue" rows=1 cols="3" readonly></textarea>
+                <pre><label for="Nvalue">Normalized vector</label></pre>
+                <textarea id="Nvalue" rows=1 cols="36" readonly></textarea>
+                <pre><label for="Qvalue">Quaternion (w,x,y,z)</label></pre>
+                <textarea id="Qvalue" rows=1 cols="36" readonly></textarea>
+                <pre><label for="Mvalue">Rotation matrix</label></pre>
+                <textarea id="Mvalue" rows=3 cols="36" readonly></textarea>
+                <pre><label for="Pvalue">Vertices of some cube</label></pre>
+                <textarea id="Pvalue" rows=8 cols="36" readonly></textarea>
             </div>
-            <div style="display: flex; justify-content: center; margin-top: 1em;">
+            <div class="controls">
                 <div style="display: flex; flex-direction: column;">
-                    <button id="step">► ||</button>
-                    <div><br>
-                        <button class="nav" id="b1" onclick="vIn = new vector3(1, -1, 0)">|\</button>
-                        <button class="nav" id="b2" onclick="vIn = new vector3(1, 0, 0)">/\</button>
-                        <button class="nav" id="b3" onclick="vIn = new vector3(1, 1, 0)">/|</button><br>
-                        <button class="nav" id="b4" onclick="vIn = new vector3(0, -1, 0)">&lt;</button>
-                        <button class="nav" id="b5" onclick="thetaDeg = thetaDeg>0?0:0.5">&nbsp;</button>
-                        <button class="nav" id="b6" onclick="vIn = new vector3(0, 1, 0)">&gt;</button><br>
-                        <button class="nav" id="b7" onclick="vIn = new vector3(-1, -1, 0)">|/</button>
-                        <button class="nav" id="b8" onclick="vIn = new vector3(-1, 0, 0)">\/</button>
-                        <button class="nav" id="b9" onclick="vIn = new vector3(-1, 1, 0)">\|</button><br>
-                        <button class="nav" id="b10" onclick="vIn = new vector3(0, 0, -1)">)</button>
-                        <button class="nav" id="b5">&nbsp;</button>
-                        <button class="nav" id="b11" onclick="vIn = new vector3(0, 0, 1)">(</button>
+                    <button aria-label="Play/pause" id="step">► ||</button>
+                    <div style="display: flex; flex-direction: row;">
+                        <button class="nav" id="b1" aria-label="Top left"
+                            onclick="vIn = new vector3(1, -1, 0)">|\</button>
+                        <button class="nav" id="b2" aria-label="Top" onclick="vIn = new vector3(1, 0, 0)">/\</button>
+                        <button class="nav" id="b3" aria-label="Top right"
+                            onclick="vIn = new vector3(1, 1, 0)">/|</button>
+                    </div>
+                    <div style="display: flex; flex-direction: row;">
+                        <button class="nav" id="b4" aria-label="Left"
+                            onclick="vIn = new vector3(0, -1, 0)">&lt;</button>
+                        <button class="nav" id="b5" aria-label="Switch speed"
+                            onclick="thetaDeg = thetaDeg>0?0:0.5">0</button>
+                        <button class="nav" id="b6" aria-label="Right"
+                            onclick="vIn = new vector3(0, 1, 0)">&gt;</button>
+                    </div>
+                    <div style="display: flex; flex-direction: row;">
+                        <button class="nav" id="b7" aria-label="Bottom right"
+                            onclick="vIn = new vector3(-1, -1, 0)">|/</button>
+                        <button class="nav" id="b8" aria-label="Bottom"
+                            onclick="vIn = new vector3(-1, 0, 0)">\/</button>
+                        <button class="nav" id="b9" aria-label="Bottom Left"
+                            onclick="vIn = new vector3(-1, 1, 0)">\|</button><br>
+                    </div>
+                    <div style="display: flex; flex-direction: row; justify-content: space-between;">
+                        <button class="nav" id="b10" aria-label="Rotate Left"
+                            onclick="vIn = new vector3(0, 0, -1)">(</button>
+                        <button class="nav" id="b11" aria-label="Rotate right"
+                            onclick="vIn = new vector3(0, 0, 1)">)</button>
                     </div>
                 </div>
                 <br>
                 <pre>
-            Show back faces <input id="face_culling" type="checkbox" onclick="face_culling = !face_culling">
-            Sort by Z depth <input id="z_depth" type="checkbox" onclick="z_depth = !z_depth" checked>
-            Opacity (0-1)   <input id="opacity" type="range" min = "0", max="1" value="0.9" step="0.05" oninput="opacity = this.value">
-            Fade Animation <input  id="hide_anim" type="checkbox" onclick="hide_anim = !hide_anim">
+    Show back faces <input id="face_culling" type="checkbox" onclick="face_culling = !face_culling">
+    Sort by Z depth <input id="z_depth" type="checkbox" onclick="z_depth = !z_depth" checked>
+    Fade Animation  <input  id="hide_anim" type="checkbox" onclick="hide_anim = !hide_anim">
+    Opacity (0-1)
+    <input id="opacity" type="range" min = "0", max="1" value="0.9" step="0.05" oninput="opacity = this.value">
         </pre>
                 <p id="Xvalue"></p>
                 <p id="Cvalue"></p>
